# SilKit

./: .gitignore  LICENSE  README.md
transpiler/project/: CMakeLists.txt  setup.sh  test.slq
transpiler/project/include/: lexer.hpp  types.hpp
transpiler/project/src/: lexer.cpp  silkit.cpp  types.cpp
